STYLE: Correct spacing for tablets

--- a/src/style/components/_base.scss
+++ b/src/style/components/_base.scss
@@ -28,6 +28,12 @@ body {
 
 .jlmx {
     overflow: hidden;
+    @include respond-to($vp-mid){
+        padding-left: 120px;
+    }
+    // @include respond-to($vp-large){
+    //     padding-left: 0;
+    // }
 }
 
 
@@ -98,6 +104,10 @@ body {
         animation-duration: 2s;
         animation-iteration-count: infinite;
 
+        @include respond-to($vp-mid) {
+            left: calc(50% - #{$width / 2} + 60px);
+        }
+
         svg {
             fill: $white;
             margin-top: 5px;
@@ -124,7 +134,7 @@ body {
         flex-direction: column;
         margin-top: 50px;
         
-        @include respond-to($vp-mid){
+        @include respond-to($vp-large){
             flex-direction: row;
             justify-content: flex-end;
             margin: auto;
@@ -192,7 +202,7 @@ body {
                     max-width: 33%;
                 }
 
-                @include respond-to($vp-mid) {
+                @include respond-to($vp-large) {
                     max-width: 25%;
                 }
                 
@@ -211,7 +221,7 @@ body {
                 }
                 
                 &.flipped {
-                    transform: rotateY(180deg) scale(2);
+                    transform: rotateY(180deg) scale(1.3);
                     box-shadow: -5px 5px 10px;
                     // transform: scale(2);
                     // width: 400px;
@@ -220,6 +230,10 @@ body {
                     // position: absolute;
                     z-index: 4;
                     // background-color: $white;
+
+                    @include respond-to($vp-mid) {
+                        transform: rotateY(180deg) scale(2);
+                    }
                        
                 }
                 
@@ -262,13 +276,15 @@ body {
                     z-index: 4;
                     margin-bottom: 0;
                     background-color: rgba($dark-blue, .85);
-                    transform: translateY(80%);
                     transition: .5s;
                     height: 100%;
                     color: $white;
 
-                    &:hover {
-                        transform: translateY(0);
+                    @include respond-to($vp-large){
+                        transform: translateY(80%);
+                        &:hover {
+                            transform: translateY(0);
+                        }
                     }
 
                     .description__button {
@@ -321,7 +337,7 @@ body {
 
         @include respond-to($vp-mid){
             .page__title {
-                margin-left: 100px;
+                // margin-left: 100px;
             }
         }
     }
