--- a/src/style/components/_settings.scss
+++ b/src/style/components/_settings.scss
@@ -2,7 +2,7 @@
     Viewport Sizes
 */
 $vp-small       : 600px;
-$vp-mid         : 800px;
+$vp-mid         : 768px;
 $vp-large       : 1024px;
 $vp-xlarge      : 1280px;
 
